--- a/styles.css
+++ b/styles.css
@@ -11,9 +11,9 @@ body {
     background-color: #e3e3e3;
 }
  header {
-     background-image: url("sunset.jpg");
-/*     background-attachment: fixed;*/
-/*     backaround-position: 0 -900px;*/
+     background-image: url("deep_ocean_planet_fish-wide.jpg");
+     background-attachment: fixed;
+     backaround-position: 0 90px;
      background-size: cover; 
      box-sizing: border-box;
      color: #fff;
